# qcm-monitor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_qcm_monitor.bat  settings.example.ini  settings.ini
qcm_monitor/: __init__.py  __main__.py  app.py  config.py  plotter.py  serial_reader.py
tests/: test_baseline_frequency.py
