[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qcm-monitor"
version = "0.1.0"
description = "Simple GUI application for monitoring quartz crystal microbalance frequency data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pyserial>=3.0",
]

[project.scripts]
qcm-monitor = "qcm_monitor.__main__:main"
